# aura-scripts

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  aura-swarm  flake.nix  improvements.md  launch-parallel.py  pyproject.toml
.beads/: .gitignore  dolt-monitor.pid  dolt-server.activity  issues.jsonl  metadata.json
.claude-plugin/: marketplace.json  plugin.json
agents/: architect.md  epoch.md  reviewer.md  supervisor.md  tester.md  worker.md
ast-grep/: no-dict-tuple-value.yml  no-frozenset-bare-str.yml  no-n-tuple-annotation.yml
commands/: aura:architect.md  aura:architect:handoff.md  aura:architect:propose-plan.md  aura:architect:ratify.md  aura:architect:request-review.md  aura:epoch.md  aura:feedback.md  aura:impl:review.md  aura:impl:slice.md  aura:msg:broadcast.md  aura:msg:receive.md  aura:msg:send.md  aura:plan.md  aura:reviewer.md  aura:reviewer:comment.md  aura:reviewer:review-code.md  aura:reviewer:review-plan.md  aura:reviewer:vote.md  aura:status.md  aura:supervisor.md  aura:supervisor:commit.md  aura:supervisor:plan-tasks.md  aura:supervisor:spawn-worker.md  aura:supervisor:track-progress.md  aura:test.md  aura:user:elicit.md  aura:user:request.md  aura:user:uat.md  aura:worker.md  aura:worker:blocked.md  aura:worker:complete.md  aura:worker:implement.md
docs/: architecture.md  aura-msg.md  aurad.md  worker.md
hooks/: bd-prime.md  hooks.json
nix/: aurad-service.nix  hm-module.nix  temporal-service.nix
protocol/: AGENTS.md  CLAUDE.md  CONSTRAINTS.md  PROCESS.md  README.md  SKILLS.md  UAT_EXAMPLE.md  UAT_TEMPLATE.md  (+1 more)
(+107 files in other folders)
