[project]
name = "aura-plugins"
version = "0.3.1"
description = "Parallel agent launcher for Aura multi-agent workflows"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "tests"]
